# debugtrace-env

./: .gitignore  DebugTraceEnv_Spec.md  FIX_SUMMARY.md  README.md  baseline.py  check_inference.py  complete_test.py  env.py  final_report.py  final_verification.py  grader.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  test_all_tasks.py  test_comprehensive.py  test_local_full.py  test_space.py  test_validator.py  test_varying_scores.py
debugtrace-env/: README.md  baseline.py  env.py  main.py  requirements.txt  tasks.py
debugtrace-env/hf-space-repo/: env.py
server/: __init__.py  app.py
